Добавил все оставльные задания с семинара 1

--- a/01_seminar/form.html
+++ b/01_seminar/form.html
@@ -16,5 +16,42 @@
     <button type="submit">Отправить</button>
     <button type="reset">Стереть форму</button>
     </form>
+    <hr>
+
+    <img src="./img/map_yar.jpg" alt="map Yaroslavl" usemap="#map">
+
+    <map name="map">
+      <area shape="circle" coords="123, 43, 60" href="https://yandex.ru/search/?text=%D1%8F%D1%80%D0%BE%D1%81%D0%BB%D0%B0%D0%B2%D0%BB%D1%8C&lr=16&src=suggest_B" alt="Ярославль" title="город Ярославль">
+      <area shape="circle" coords="630, 130, 100" href="https://ru.wikipedia.org/wiki/%D0%92%D0%BE%D0%BB%D0%B3%D0%B0" alt="Волга" title="Волга">
+      <area shape="circle" coords="434, 194, 20" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D1%80%D0%BA%D0%BE%D0%B2%D1%8C_%D0%98%D0%BB%D0%B8%D0%B8_%D0%9F%D1%80%D0%BE%D1%80%D0%BE%D0%BA%D0%B0_(%D0%AF%D1%80%D0%BE%D1%81%D0%BB%D0%B0%D0%B2%D0%BB%D1%8C)" alt="Церковь" title="Церковь Илии Пророка">
+      <area shape="circle" coords="268, 378, 30" href="https://www.yarnews.net/files/1/1000/35852.jpg" alt="Площадь" title="Площадь Богоявления">
+    </map>
+
+    <table border="10">
+      <tbody>
+        <tr>
+          <th>1 заголовок</th>
+          <th>2 заголовок</th>
+          <th>3 заголовок</th>
+        </tr>
+        <tr>
+          <td>1.1</td>
+          <td rowspan="2">1.2 rowspan=</td>
+          <td>1.3</td>
+        </tr>
+        <tr>
+          <td>2.1</td>
+          <!-- <td>2.2</td> -->
+          <td >2.3</td>
+        </tr>
+        <tr>
+          <td>3.1</td>
+          <td colspan="2">3.2 colspan=</td>
+          <!-- <td>3.3</td> -->
+        </tr>
+      </tbody>
+    </table>
+
+
   </body>
 </html>
