--- a/01_seminar/index.html
+++ b/01_seminar/index.html
@@ -3,34 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
     <title>Главная</title>
   </head>
   <body>
-    <a href="./index.html">Главная</a>
-    <a href="./info/about.html">Обо мне</a>
-    <a href="./form.html">Оставить заявку</a>
-    <h1>Моя первая html страница</h1>
-    <p>
+    <a class="menu" href="./index.html">Главная</a>
+    <a class="menu" href="./info/about.html">Обо мне</a>
+    <a class="menu" href="./form.html">Оставить заявку</a>
+    <h1 class="title">Моя первая html страница</h1>
+    <p class="paragraph">
       Далеко-далеко за словесными горами в стране гласных и согласных живут
       рыбные тексты. Собрал, текст. Взгляд необходимыми, текст вопрос заглавных
       букв назад даже вопроса запятой снова он прямо силуэт которой о злых! Там?
-    </p>
-    <h2>Заголовок 2 уровня</h2>
-    <p>
+    </p class="paragraph">
+    <h2 class="subtitle">Заголовок 2 уровня</h2>
+    <p class="paragraph">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum dolorum
       vitae cumque iusto eveniet consequuntur id dicta perspiciatis earum, quo
       ad tempore, libero voluptatem aut rerum quos omnis autem ut?
-    </p>
-    <p>
+    </p class="paragraph">
+    <p class="paragraph">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum dolorum
       vitae cumque iusto eveniet consequuntur id dicta perspiciatis earum, quo
       ad tempore, libero voluptatem aut rerum quos omnis autem ut?
-    </p>
-    <p>
+    </p class="paragraph">
+    <p class="paragraph">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum dolorum
       vitae cumque iusto eveniet consequuntur id dicta perspiciatis earum, quo
       ad tempore, libero voluptatem aut rerum quos omnis autem ut?
-    </p>
+    </p class="paragraph">
     <a href="https://vk.com/vassily93"><img src="./img/vk.svg" alt="logo vk" width="30px">ВКонтакте</a>
     <a href="https://t.me/asrbacr"><img src="./img/tg.svg" alt="logo tg" width="30px">Телеграмм</a>
   </body>
