--- a/01_seminar/info/about.html
+++ b/01_seminar/info/about.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
     <title>Обо мне</title>
   </head>
   <body>
-    <a href="../index.html">Главная</a>
-    <a href="./about.html">Обо мне</a>
-    <a href="../form.html">Оставить заявку</a>
-    <h1>Обо мне</h1>
+    <a class="menu" href="../index.html">Главная</a>
+    <a class="menu" href="./about.html">Обо мне</a>
+    <a class="menu" href="../form.html">Оставить заявку</a>
+    <h1 class="title">Обо мне</h1>
     <img
       src="../img/suNpmNAw8RM.jpg"
       alt="Человек держащий в руке большую сосульку"
       width="300px"
     />
-    <p>
+    <p class="paragraph">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
       perspiciatis. Tenetur neque iusto consequatur ex aliquid, voluptatum
       dolorem quibusdam libero doloremque ad, odio itaque placeat voluptates ab
