Верстаю страницу с семинара 3, чтобы на семинаре доделать позиционирование

--- a/03_seminar/index.html
+++ b/03_seminar/index.html
@@ -39,6 +39,7 @@
     <div class="about">
         <div class="about_top">
             <h2 class="about_header">About</h2>
+            <div class="header_line"></div>
             <p class="about_top-text">
                 The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside 
             </p>
@@ -53,6 +54,7 @@
 
     <div class="favorites">
         <h2 class="favorites_header">Favorites</h2>
+        <div class="header_line"></div>
         <div class="favorites_top">
             <p class="favorites_top-text">Pick favorites of season</p>
             <p class="favorites_selection"><input name="favorite" type="radio">Winter</p>
@@ -70,9 +72,46 @@
                 <p class="first_book_top-author">By Sunyi Dean</p>
             </div>
             <p class="first_book_text">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</p>
-
-
+            <a href="#" class="first_book_buttom">Buy</a>
+            <img src="./image/book_1.jpg" alt="The book eaters" class="first_book_image">
         </div>
+        <div class="first_book">
+            <div class="first_book_head">
+                Staff Picks
+            </div>
+            <div class="first_book_top">
+                <p class="first_book_top-name">Cackle</p>
+                <p class="first_book_top-author">By Rachel Harrison</p>
+            </div>
+            <p class="first_book_text">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</p>
+            <a href="#" class="first_book_buttom">Buy</a>
+            <img src="./image/book_2.jpg" alt="Book Cackle" class="first_book_image">
+        </div>
+        <div class="first_book">
+            <div class="first_book_head">
+                Staff Picks
+            </div>
+            <div class="first_book_top">
+                <p class="first_book_top-name">Dante: Poet of the Secular World</p>
+                <p class="first_book_top-author">By Erich Auerbach</p>
+            </div>
+            <p class="first_book_text">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</p>
+            <a href="#" class="first_book_buttom">Buy</a>
+            <img src="./image/book_3.jpg" alt="Book By Erich Auerbach" class="first_book_image">
+        </div>
+        <div class="first_book">
+            <div class="first_book_head">
+                Staff Picks
+            </div>
+            <div class="first_book_top">
+                <p class="first_book_top-name">The Last Queen</p>
+                <p class="first_book_top-author">By Clive Irving</p>
+            </div>
+            <p class="first_book_text">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</p>
+            <a href="#" class="first_book_buttom">Buy</a>
+            <img src="./image/book_4.jpg" alt="Book By Erich Auerbach" class="first_book_image">
+        </div>
+
     </div>
 
 </body>
