--- a/03_seminar/index.html
+++ b/03_seminar/index.html
@@ -38,8 +38,8 @@
 
     <div class="about">
         <div class="about_top">
-            <h2 class="about_header">About</h2>
-            <div class="header_line"></div>
+            <h2 class="header_section about_header">About</h2>
+            <div class="header_section-line"></div>
             <p class="about_top-text">
                 The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside 
             </p>
@@ -49,18 +49,24 @@
             <img src="./image/image_2.jpg" alt="busts of people " class="about_image-2">
             <img src="./image/image_3.jpg" alt="bookshelves" class="about_image-3">
         </div>
-        <div class="about_img-pic"></div>
+        <div class="about_img-pic">
+            <svg xmlns="http://www.w3.org/2000/svg" width="68" height="16" viewBox="0 0 68 16" fill="none">
+                <rect width="16" height="16" rx="8" fill="#BB945F"/>
+                <rect x="26" width="16" height="16" rx="8" fill="#0C0C0E"/>
+                <rect x="52" width="16" height="16" rx="8" fill="#0C0C0E"/>
+              </svg>
+        </div>
     </div>
 
     <div class="favorites">
-        <h2 class="favorites_header">Favorites</h2>
-        <div class="header_line"></div>
+        <h2 class="header_section favorites_header">Favorites</h2>
+        <div class="header_section-line"></div>
         <div class="favorites_top">
             <p class="favorites_top-text">Pick favorites of season</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Winter</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Spring</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Summer</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Autumn</p>
+            <p><input name="favorite" type="radio" class="favorites_selection">Winter</p>
+            <p><input name="favorite" type="radio" class="favorites_selection">Spring</p>
+            <p><input name="favorite" type="radio" class="favorites_selection">Summer</p>
+            <p><input name="favorite" type="radio" class="favorites_selection">Autumn</p>
         </div>
 
         <div class="first_book">
