--- a/03_DZ/index.html
+++ b/03_DZ/index.html
@@ -10,21 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:wght@200;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="header">
-        <a href="#" class="header_link">Home</a>
-        <a href="#" class="header_link">About Us</a>
-        <a href="#" class="header_link">Tours</a>
-        <a href="#" class="header_link">Gallery</a>
-        <a href="#" class="header_link">Reviews</a>
-        <a href="#" class="header_link">Contact</a>
-    </nav>
-    <div class="welcome">
-        <img src="./image/Travel Time.jpg" alt="forest and mountains" class="welcome_image">
-        <h1 class="welcome_title">Travel Time</h1>
-        <p class="welcome_text">
-            let's travel with us we will start a new adventure together with full of happiness and laughs
-        </p>
-        <a href="#" class="welcome_button">Join</a>
+    <div class="img_fon center">
+
+        <!-- <img src="./image/Travel Time.jpg" alt="forest and mountains" class="welcome_image"> -->
+        <nav class="header center">
+            <a href="#" class="header_link">Home</a>
+            <a href="#" class="header_link">About Us</a>
+            <a href="#" class="header_link">Tours</a>
+            <a href="#" class="header_link">Gallery</a>
+            <a href="#" class="header_link">Reviews</a>
+            <a href="#" class="header_link">Contact</a>
+        </nav>
+        <div class="welcome center">
+            <!-- <img src="./image/Travel Time.jpg" alt="forest and mountains" class="welcome_image"> -->
+            <h1 class="welcome_title">Travel Time</h1>
+            <p class="welcome_text">
+                let's travel with us we will start a new adventure together with full of happiness and laughs
+            </p>
+            <a href="#" class="welcome_button">Join</a>
+        </div>
     </div>
 </body>
 </html>
