--- a/03_seminar/index.html
+++ b/03_seminar/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Forum&family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
+    <div class="header center">
         <div class="header_name">Brooklyn Public Library</div>
         <nav class="header_links">
             <a href=#" class="header_link">About</a>
@@ -26,17 +26,15 @@
         </nav>
     </div>
 
-    <div class="title">
+    <div class="title center">
         <div class="title_image">
-            <img src="./image/welcome.jpg" alt="" class="title_image_welcome">
-        </div>
-        <h1 class="title_top">
-            Welcome to the Brooklyn Library
-        </h1>
-        
+            <h1 class="title_top">
+                Welcome to the Brooklyn Library
+            </h1>
+        </div> 
     </div>
 
-    <div class="about">
+    <div class="about center">
         <div class="about_top">
             <h2 class="about_header">About</h2>
             <div class="header_line"></div>
@@ -49,19 +47,32 @@
             <img src="./image/image_2.jpg" alt="busts of people " class="about_image-2">
             <img src="./image/image_3.jpg" alt="bookshelves" class="about_image-3">
         </div>
-        <div class="about_img-pic"></div>
+        <div class="about_img-pic">
+            <svg xmlns="http://www.w3.org/2000/svg" width="68" height="16" viewBox="0 0 68 16" fill="none">
+                <rect width="16" height="16" rx="8" fill="#BB945F"/>
+                <rect x="26" width="16" height="16" rx="8" fill="#0C0C0E"/>
+                <rect x="52" width="16" height="16" rx="8" fill="#0C0C0E"/>
+            </svg>
+        </div>
     </div>
 
-    <div class="favorites">
-        <h2 class="favorites_header">Favorites</h2>
-        <div class="header_line"></div>
-        <div class="favorites_top">
-            <p class="favorites_top-text">Pick favorites of season</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Winter</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Spring</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Summer</p>
-            <p class="favorites_selection"><input name="favorite" type="radio">Autumn</p>
+    <div class="favorites center">
+        <div class="favorites_head">
+            <h2 class="favorites_header about_header">Favorites</h2>
+            <div class="header_line"></div>
         </div>
+        <div class="favorites_contents">
+            <div class="favorites_top">
+                <p class="favorites_top-text">Pick favorites of season</p>
+            </div>
+            <div class="favorites_top_selections">
+                <p class="favorites_selection"><input name="favorite" type="radio">Winter</p>
+                <p class="favorites_selection"><input name="favorite" type="radio">Spring</p>
+                <p class="favorites_selection"><input name="favorite" type="radio">Summer</p>
+                <p class="favorites_selection"><input name="favorite" type="radio">Autumn</p>
+            </div>
+    </div>
+        <div class="favorites_books">
 
         <div class="first_book">
             <div class="first_book_head">
@@ -110,6 +121,7 @@
             <p class="first_book_text">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</p>
             <a href="#" class="first_book_buttom">Buy</a>
             <img src="./image/book_4.jpg" alt="Book By Erich Auerbach" class="first_book_image">
+        </div>
         </div>
 
     </div>
