--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -14,7 +14,7 @@
     <div class="header center">
         <a href="#">
             <div class="header_logo">
-                <img src="./img/Logo.png" alt="Logo GrowBe">
+                <img src="./img/logo.png" alt="Logo GrowBe">
                 <p class="header_logo-text">Grow<span class="header_logo-span">Be</span></p>
                 
             </div>
