Доверстал страницу ДЗ 4

--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -59,7 +59,7 @@
     <!-- about us start -->
     <div class="about center">
         <div class="about_left">
-            <h2 class="about_left_header services_header">Perfect Solution For Your Business</h2>
+            <h2 class="about_left_header">Perfect Solution For Your Business</h2>
             <p class="about_left_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>                                    
             <a href="#" class="top_content__left_button">Learn More</a>
         </div>
