--- a/03_seminar/index.html
+++ b/03_seminar/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Forum&family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header center">
+    <div class="header">
         <div class="header_name">Brooklyn Public Library</div>
         <nav class="header_links">
             <a href=#" class="header_link">About</a>
@@ -26,105 +26,109 @@
         </nav>
     </div>
 
-    <div class="title center">
-        <div class="title_image">
-            <h1 class="title_top">
-                Welcome to the Brooklyn Library
-            </h1>
-        </div> 
-    </div>
+    <div class="content_site">
 
-    <div class="about center">
-        <div class="about_top">
-            <h2 class="header_section about_header">About</h2>
-            <div class="header_section-line"></div>
-            <p class="about_top-text">
-                The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside 
-            </p>
-        </div>
-        <div class="about_images">
-            <img src="./image/image_1.jpg" alt="book woman" class="about_image-1">
-            <img src="./image/image_2.jpg" alt="busts of people " class="about_image-2">
-            <img src="./image/image_3.jpg" alt="bookshelves" class="about_image-3">
-        </div>
-        <div class="about_img-pic">
-            <svg xmlns="http://www.w3.org/2000/svg" width="68" height="16" viewBox="0 0 68 16" fill="none">
-                <rect width="16" height="16" rx="8" fill="#BB945F"/>
-                <rect x="26" width="16" height="16" rx="8" fill="#0C0C0E"/>
-                <rect x="52" width="16" height="16" rx="8" fill="#0C0C0E"/>
-            </svg>
-        </div>
-    </div>
-
-    <div class="favorites center">
-        <div class="favorites_head">
-            <h2 class="favorites_header about_header">Favorites</h2>
-            <div class="header_line"></div>
-        </div>
-        <div class="favorites_contents">
-            <div class="favorites_top">
-                <p class="favorites_top-text">Pick favorites of season</p>
-            </div>
-            <div class="favorites_top_selections">
-                <p class="favorites_selection"><input name="favorite" type="radio">Winter</p>
-                <p class="favorites_selection"><input name="favorite" type="radio">Spring</p>
-                <p class="favorites_selection"><input name="favorite" type="radio">Summer</p>
-                <p class="favorites_selection"><input name="favorite" type="radio">Autumn</p>
-            </div>
-    </div>
-        <div class="favorites_books">
-
-        <div class="first_book">
-            <div class="first_book_head">
-                Staff Picks
-            </div>
-            <div class="first_book_top">
-                <p class="first_book_top-name">The Book Eaters</p>
-                <p class="first_book_top-author">By Sunyi Dean</p>
-            </div>
-            <p class="first_book_text">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</p>
-            <a href="#" class="first_book_buttom">Buy</a>
-            <img src="./image/book_1.jpg" alt="The book eaters" class="first_book_image">
-        </div>
-        <div class="first_book">
-            <div class="first_book_head">
-                Staff Picks
-            </div>
-            <div class="first_book_top">
-                <p class="first_book_top-name">Cackle</p>
-                <p class="first_book_top-author">By Rachel Harrison</p>
-            </div>
-            <p class="first_book_text">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</p>
-            <a href="#" class="first_book_buttom">Buy</a>
-            <img src="./image/book_2.jpg" alt="Book Cackle" class="first_book_image">
-        </div>
-        <div class="first_book">
-            <div class="first_book_head">
-                Staff Picks
-            </div>
-            <div class="first_book_top">
-                <p class="first_book_top-name">Dante: Poet of the Secular World</p>
-                <p class="first_book_top-author">By Erich Auerbach</p>
-            </div>
-            <p class="first_book_text">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</p>
-            <a href="#" class="first_book_buttom">Buy</a>
-            <img src="./image/book_3.jpg" alt="Book By Erich Auerbach" class="first_book_image">
-        </div>
-        <div class="first_book">
-            <div class="first_book_head">
-                Staff Picks
-            </div>
-            <div class="first_book_top">
-                <p class="first_book_top-name">The Last Queen</p>
-                <p class="first_book_top-author">By Clive Irving</p>
-            </div>
-            <p class="first_book_text">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</p>
-            <a href="#" class="first_book_buttom">Buy</a>
-            <img src="./image/book_4.jpg" alt="Book By Erich Auerbach" class="first_book_image">
-        </div>
+        <div class="title">
+            <div class="title_image">
+                <h1 class="title_top">
+                    Welcome to the Brooklyn Library
+                </h1>
+            </div> 
         </div>
 
+        <div class="about">
+            <div class="about_top">
+                <h2 class="header_section about_header">About</h2>
+                <div class="header_section-line"></div>
+                <p class="about_top-text">
+                    The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside 
+                </p>
+            </div>
+            <div class="about_images">
+                <img src="./image/image_1.jpg" alt="book woman" class="about_image image-1">
+                <img src="./image/image_2.jpg" alt="busts of people " class="about_image image-2">
+                <img src="./image/image_3.jpg" alt="bookshelves" class="about_image image-3">
+            </div>
+            <div class="about_img-pic">
+                <svg xmlns="http://www.w3.org/2000/svg" width="68" height="16" viewBox="0 0 68 16" fill="none">
+                    <rect width="16" height="16" rx="8" fill="#BB945F"/>
+                    <rect x="26" width="16" height="16" rx="8" fill="#0C0C0E"/>
+                    <rect x="52" width="16" height="16" rx="8" fill="#0C0C0E"/>
+                </svg>
+            </div>
+        </div>
+
+        <div class="favorites">
+            <div class="favorites_head">
+                <h2 class="favorites_header header_section">Favorites</h2>
+                <div class="header_section-line"></div>
+            </div>
+            <div class="favorites_contents">
+                <div class="favorites_top">
+                    <p class="favorites_top-text">Pick favorites of season</p>
+                </div>
+                <div class="favorites_top_selections">
+                    <p class="favorites_selection"><input name="favorite" type="radio">Winter</p>
+                    <p class="favorites_selection"><input name="favorite" type="radio">Spring</p>
+                    <p class="favorites_selection"><input name="favorite" type="radio">Summer</p>
+                    <p class="favorites_selection"><input name="favorite" type="radio">Autumn</p>
+                </div>
+        </div>
+            <div class="favorites_books">
+                <div class="first_book">
+                    <div class="first_book_head">
+                        Staff Picks
+                        <div class="first_book_head-line"></div>
+                    </div>
+                    <div class="first_book_top">
+                        <p class="first_book_top-name">The Book Eaters</p>
+                        <p class="first_book_top-author">By Sunyi Dean</p>
+                    </div>
+                    <p class="first_book_text">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</p>
+                    <a href="#" class="first_book_buttom">Buy</a>
+                    <img src="./image/book_1.jpg" alt="The book eaters" class="first_book_image">
+                </div>
+                <div class="first_book">
+                    <div class="first_book_head">
+                        Staff Picks
+                    </div>
+                    <div class="first_book_top">
+                        <p class="first_book_top-name">Cackle</p>
+                        <p class="first_book_top-author">By Rachel Harrison</p>
+                    </div>
+                    <p class="first_book_text">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</p>
+                    <a href="#" class="first_book_buttom">Buy</a>
+                    <img src="./image/book_2.jpg" alt="Book Cackle" class="first_book_image">
+                </div>
+                <div class="first_book">
+                    <div class="first_book_head">
+                        Staff Picks
+                    </div>
+                    <div class="first_book_top">
+                        <p class="first_book_top-name">Dante: Poet of the Secular World</p>
+                        <p class="first_book_top-author">By Erich Auerbach</p>
+                    </div>
+                    <p class="first_book_text">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</p>
+                    <a href="#" class="first_book_buttom">Buy</a>
+                    <img src="./image/book_3.jpg" alt="Book By Erich Auerbach" class="first_book_image">
+                </div>
+                <div class="first_book">
+                    <div class="first_book_head">
+                        Staff Picks
+                    </div>
+                    <div class="first_book_top">
+                        <p class="first_book_top-name">The Last Queen</p>
+                        <p class="first_book_top-author">By Clive Irving</p>
+                    </div>
+                    <p class="first_book_text">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</p>
+                    <a href="#" class="first_book_buttom">Buy</a>
+                    <img src="./image/book_4.jpg" alt="Book By Erich Auerbach" class="first_book_image">
+                </div>
+            </div>
+
+        </div>
     </div>
+
 
 </body>
 </html>
