--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -61,10 +61,11 @@
         <div class="about_left">
             <h2 class="about_left_header">Perfect Solution For Your Business</h2>
             <p class="about_left_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>                                    
-            <a href="#" class="top_content__left_button">Learn More</a>
+            <!-- <a href="#" class="about_left_button">Learn More</a> -->
+            <div class="about_left_button"><a href="#" class="about_left_but">Learn More</a></div>
         </div>
         <div class="about_right">
-            <img src="./img/about_right-image.jpg" alt="Mockup macbook" class="about_right-img">
+            <img src="./img/about_right-image.png" alt="Mockup macbook" class="about_right-img">
         </div>
     </div>
     <!-- about us end -->
