--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -30,134 +30,141 @@
         </div>
     </div>
     <!-- header end -->
-    <!-- top start -->
-    <div class="top center">
-        <div class="top_contents">
-            <div class="top_content">
-                <h1 class="top_content__head">SEO & Digital Marketing For Your Website.</h1>
+    <!-- content start -->
+    <div class="content">
+        <!-- top start -->
+        <div class="top center">
+            <div class="top_contents">
+                <div class="top_content">
+                    <h1 class="top_content__head">SEO & Digital Marketing For Your Website.</h1>
+                </div>
+                <div class="top_content__text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</div>
+                <div class="top_content_buttons">
+                    <a href="#" class="top_content__left_button">Start Now</a>
+                    <a href="#" class="top_content__right_button">Watch Video</a>
+                </div>
             </div>
-            <div class="top_content__text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</div>
-            <div class="top_content_buttons">
-                <a href="#" class="top_content__left_button">Start Now</a>
-                <a href="#" class="top_content__right_button">Watch Video</a>
-            </div>
+                <div class="top__image">
+                    <img src="./img/top_image.png" alt="Development team">
+                </div>
         </div>
-            <div class="top__image">
-                <img src="./img/top_image.png" alt="Development team">
-            </div>
-    </div>
-    <div class="top__logo center">
-        <img src="./img/01.png" alt="Liva" class="brand__logo">
-        <img src="./img/02.png" alt="Kanba" class="brand__logo">
-        <img src="./img/03.png" alt="Amara" class="brand__logo">
-        <img src="./img/04.png" alt="Aven" class="brand__logo">
-        <img src="./img/05.png" alt="Hexlab" class="brand__logo">
-        <img src="./img/02.png" alt="Kanba" class="brand__logo">
-    </div>
-    <!-- top end -->
+        <div class="top__logo center">
+            <img src="./img/01.png" alt="Liva" class="brand__logo">
+            <img src="./img/02.png" alt="Kanba" class="brand__logo">
+            <img src="./img/03.png" alt="Amara" class="brand__logo">
+            <img src="./img/04.png" alt="Aven" class="brand__logo">
+            <img src="./img/05.png" alt="Hexlab" class="brand__logo">
+            <img src="./img/02.png" alt="Kanba" class="brand__logo">
+        </div>
+        <!-- top end -->
 
-    <!-- about us start -->
-    <div class="about center">
-        <div class="about_left">
-            <h2 class="about_left_header">Perfect Solution For Your Business</h2>
-            <p class="about_left_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>                                    
-            <!-- <a href="#" class="about_left_button">Learn More</a> -->
-            <div class="about_left_button"><a href="#" class="about_left_but">Learn More</a></div>
+        <!-- about us start -->
+        <div class="about_full center">
+
+            <div class="about ">
+                <div class="about_left">
+                    <h2 class="about_left_header">Perfect Solution For Your Business</h2>
+                    <p class="about_left_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>                                    
+                    <a href="#" class="about_left_button">Learn More</a>
+                </div>
+                <div class="about_right">
+                    <img src="./img/about_right-image.png" alt="Mockup macbook" class="about_right-img">
+                </div>
+            </div>
         </div>
-        <div class="about_right">
-            <img src="./img/about_right-image.png" alt="Mockup macbook" class="about_right-img">
+
+        <!-- about us end -->
+        
+        <!-- features start -->
+        <div class="features center">
+            <div class="features_card card_1">
+                <img src="./img/icons/01.png" alt="upward graph" class="features_card_logo">
+                <h2 class="features_card_header">
+                    Grow Your Business
+                </h2>
+                <div class="features_card_text">
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                </div>
+                <a href="#" class="features_card_link">Read More...</a>
+            </div>
+            <div class="features_card card_2">
+                <img src="./img/icons/02.png" alt="zipper" class="features_card_logo">
+                <h2 class="features_card_header">
+                    Get Quality Ieads
+                </h2>
+                <div class="features_card_text">
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                </div>
+                <a href="#" class="features_card_link">Read More...</a>
+            </div>
+            <div class="features_card card_3">
+                <img src="./img/icons/03.png" alt="label" class="features_card_logo">
+                <h2 class="features_card_header">
+                    Drive More Sales
+                </h2>
+                <div class="features_card_text">
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                </div>
+                <a href="#" class="features_card_link">Read More...</a>
+            </div>
         </div>
+        <!-- features end -->
+        <!-- service start -->
+        <div class="services center">
+            <h2 class="services_header">Why You Should Choose Us.</h2>
+            <div class="box_services_text">
+                <div class="services_text">
+                    Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.
+                </div>
+            </div>
+            <div class="services_cards">
+                <div class="services_card services_card_1">
+                    <img src="./img/illustration_1.png" alt="folders and items" class="services_card_img">
+                    <h3 class="services_card_header">Keyword Research</h3>
+                    <p class="services_card_text">Business applications through revolutionary catalysts for chang the Seamlessly <br>underwhelm dures.</p>
+                    <!-- <input type="button" value="Learn More" class="services_card_button">
+                    <div class="services_card_button"></div> -->
+                    <a href="#" class="services_card_button">Learn More 
+                        <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="icon">
+                                <path id="Vector" d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
+                <div class="services_card services_card_2">
+                    <img src="./img/illustration_2.png" alt="folders and items" class="services_card_img">
+                    <h3 class="services_card_header">Seo Optimazadion</h3>
+                    <p class="services_card_text">Business applications through revolutionary catalysts for chang the Seamlessly <br>underwhelm dures.</p>
+                    <!-- <input type="button" value="Learn More" class="services_card_button">
+                    <div class="services_card_button"></div> -->
+                    <a href="#" class="services_card_button">Learn More 
+                        <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="icon">
+                                <path id="Vector" d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
+                <div class="services_card services_card_3">
+                    <img src="./img/illustration_3.png" alt="folders and items" class="services_card_img">
+                    <h3 class="services_card_header">Social Marketing</h3>
+                    <p class="services_card_text">Business applications through revolutionary catalysts for chang the Seamlessly <br>underwhelm dures.</p>
+                    <!-- <input type="button" value="Learn More" class="services_card_button">
+                    <div class="services_card_button"></div> -->
+                    <a href="#" class="services_card_button">Learn More 
+                        <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="icon">
+                                <path id="Vector" d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- service end -->
     </div>
-    <!-- about us end -->
-    
-    <!-- features start -->
-    <div class="features center">
-        <div class="features_card card_1">
-            <img src="./img/icons/01.png" alt="upward graph" class="features_card_logo">
-            <h2 class="features_card_header">
-                Grow Your Business
-            </h2>
-            <div class="features_card_text">
-                Leverage agile frameworks to provide a robust synopsis for high level overviews.
-            </div>
-            <a href="#" class="features_card_link">Read More...</a>
-        </div>
-        <div class="features_card card_2">
-            <img src="./img/icons/02.png" alt="zipper" class="features_card_logo">
-            <h2 class="features_card_header">
-                Get Quality Ieads
-            </h2>
-            <div class="features_card_text">
-                Leverage agile frameworks to provide a robust synopsis for high level overviews.
-            </div>
-            <a href="#" class="features_card_link">Read More...</a>
-        </div>
-        <div class="features_card card_3">
-            <img src="./img/icons/03.png" alt="label" class="features_card_logo">
-            <h2 class="features_card_header">
-                Drive More Sales
-            </h2>
-            <div class="features_card_text">
-                Leverage agile frameworks to provide a robust synopsis for high level overviews.
-            </div>
-            <a href="#" class="features_card_link">Read More...</a>
-        </div>
-    </div>
-    <!-- features end -->
-    <!-- service start -->
-    <div class="services center">
-        <h2 class="services_header">Why You Should Choose Us.</h2>
-        <div class="box_services_text">
-            <div class="services_text">
-                Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.
-            </div>
-        </div>
-        <div class="services_cards">
-            <div class="services_card services_card_1">
-                <img src="./img/illustration_1.png" alt="folders and items" class="services_card_img">
-                <h3 class="services_card_header">Keyword Research</h3>
-                <p class="services_card_text">Business applications through revolutionary catalysts for chang the Seamlessly <br>underwhelm dures.</p>
-                <!-- <input type="button" value="Learn More" class="services_card_button">
-                <div class="services_card_button"></div> -->
-                <a href="#" class="services_card_button">Learn More 
-                    <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="icon">
-                            <path id="Vector" d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </g>
-                    </svg>
-                </a>
-            </div>
-            <div class="services_card services_card_2">
-                <img src="./img/illustration_2.png" alt="folders and items" class="services_card_img">
-                <h3 class="services_card_header">Seo Optimazadion</h3>
-                <p class="services_card_text">Business applications through revolutionary catalysts for chang the Seamlessly <br>underwhelm dures.</p>
-                <!-- <input type="button" value="Learn More" class="services_card_button">
-                <div class="services_card_button"></div> -->
-                <a href="#" class="services_card_button">Learn More 
-                    <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="icon">
-                            <path id="Vector" d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </g>
-                    </svg>
-                </a>
-            </div>
-            <div class="services_card services_card_3">
-                <img src="./img/illustration_3.png" alt="folders and items" class="services_card_img">
-                <h3 class="services_card_header">Social Marketing</h3>
-                <p class="services_card_text">Business applications through revolutionary catalysts for chang the Seamlessly <br>underwhelm dures.</p>
-                <!-- <input type="button" value="Learn More" class="services_card_button">
-                <div class="services_card_button"></div> -->
-                <a href="#" class="services_card_button">Learn More 
-                    <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="icon">
-                            <path id="Vector" d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </g>
-                    </svg>
-                </a>
-            </div>
-        </div>
-    </div>
-    <!-- service end -->
+    <!-- content end -->
 
 
 </body>
