Доверстал старницу, чтобы она перестаривалась

--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -8,6 +8,7 @@
     <link href="./fonts/Gilroy-Bold.ttf" rel="stylesheet">
     <link href="./fonts/Gilroy-Medium.ttf" rel="stylesheet">
     <link href="./fonts/Gilroy-Semibold.ttf" rel="stylesheet">
+    <link href="./fonts/gilroy-Regular.ttf" rel="stylesheet">
 </head>
 <body>
     <!-- header start -->
@@ -59,16 +60,18 @@
         <!-- top end -->
 
         <!-- about us start -->
-        <div class="about_full center">
+        <div class="about_full ">
+            <div class="about_full_backgraund center">
 
-            <div class="about ">
-                <div class="about_left">
-                    <h2 class="about_left_header">Perfect Solution For Your Business</h2>
-                    <p class="about_left_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>                                    
-                    <a href="#" class="about_left_button">Learn More</a>
-                </div>
-                <div class="about_right">
-                    <img src="./img/about_right-image.png" alt="Mockup macbook" class="about_right-img">
+                <div class="about ">
+                    <div class="about_left">
+                        <h2 class="about_left_header">Perfect Solution For Your Business</h2>
+                        <p class="about_left_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>                                    
+                        <a href="#" class="about_left_button">Learn More</a>
+                    </div>
+                    <div class="about_right">
+                        <img src="./img/about_right-image.png" alt="Mockup macbook" class="about_right-img">
+                    </div>
                 </div>
             </div>
         </div>
