Верстаю макет ниже

--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -24,10 +24,18 @@
             <a href="#" class="header__link">Home</a>
             <a href="#" class="header__link">About Us</a>
             <a href="#" class="header__link">Services</a>
-            <a href="#" class="header__link">Features</a>
+            <a href="#" class="header__link header__link_elem">Features
+                <div class="header__link_icon">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg width="15px" height="15px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.70711 9.71069C5.31658 10.1012 5.31658 10.7344 5.70711 11.1249L10.5993 16.0123C11.3805 16.7927 12.6463 16.7924 13.4271 16.0117L18.3174 11.1213C18.708 10.7308 18.708 10.0976 18.3174 9.70708C17.9269 9.31655 17.2937 9.31655 16.9032 9.70708L12.7176 13.8927C12.3271 14.2833 11.6939 14.2832 11.3034 13.8927L7.12132 9.71069C6.7308 9.32016 6.09763 9.32016 5.70711 9.71069Z" fill="#0F0F0F"/>
+                    </svg>
+                </div>
+            </a>
             <a href="#" class="header__link">Team</a>
             <a href="#" class="header__link">Blog</a>
             <a href="#" class="header__link">Contact</a>
+            <a href="#" class="header__link-burger">Get Started</a>
         </div>
     </div>
     <!-- header end -->
@@ -166,6 +174,32 @@
             </div>
         </div>
         <!-- service end -->
+        <!-- what we do start -->
+        <div class="what_we_do center">
+            <div class="what_we_do_left center">
+                <img src="./img/what_we_do-img.jpg" alt="compass" class="what_we_do_left_img">
+            </div>
+            <div class="what_we_do_right">
+                <h2 class="what_we_do_right-header">You may ask what SEO&nbsp;&amp;&nbsp;why do&nbsp;you need&nbsp;it?</h2>
+                <p class="what_we_do_right-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary.</p>
+                <div class="what_we_do_right_group">
+                    <div class="what_we_do_right_element">
+                        <div class="what_we_do_right_element-img">
+                            <img src="./img/what_we_do_global.png" alt="global">
+                        </div>
+                        <div class="what_we_do_right_element_content">
+                            <div class="what_we_do_right_element_content-head">
+                                <h4>Social Media Marketing</h4>
+                            </div>
+                            <div class="what_we_do_right_element_content-text">
+                                <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- what we do end -->
     </div>
     <!-- content end -->
 
